# crypto-orderbook

./: Cargo.toml  Dockerfile
docs/: generate_pdf.py
src/: config.rs  error.rs  lib.rs  main.rs  metrics.rs
src/api/: mod.rs  routes.rs  ws_push.rs
src/orderbook/: book.rs  manager.rs  mod.rs
src/trades/: manager.rs  mod.rs  vwap.rs
src/ws/: binance.rs  client.rs  mod.rs
tests/: api_integration.rs
